voting-app-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    app: voting-app
    env: development
